[gd_scene load_steps=14 format=3 uid="uid://dcb2rnjj7i53k"]

[ext_resource type="Script" path="res://scripts/shield.gd" id="1_kr24l"]
[ext_resource type="Shader" uid="uid://b4xrhyma4ma41" path="res://assets/shaders/shield.tres" id="1_yg5oa"]
[ext_resource type="PackedScene" uid="uid://dy0gd3byhm3x0" path="res://objects/oxygen_leak.tscn" id="2_lu0aw"]
[ext_resource type="AudioStream" uid="uid://bd5ig8kcecon3" path="res://assets/audio/Kenney/Digital/zap1b.ogg" id="3_144ls"]
[ext_resource type="AudioStream" uid="uid://clyegecx23x44" path="res://assets/audio/Kenney/Digital/zap1c.ogg" id="4_jo21d"]

[sub_resource type="SphereShape3D" id="SphereShape3D_iptjo"]
radius = 2.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1sboe"]
render_priority = -1
shader = ExtResource("1_yg5oa")
shader_parameter/Color = Color(0, 0.709804, 0.729412, 0.392157)
shader_parameter/Latitudes = 12.0
shader_parameter/Longitudes = 6.0
shader_parameter/LineWidth = 16.0

[sub_resource type="SphereMesh" id="SphereMesh_wp7v8"]
material = SubResource("ShaderMaterial_1sboe")
flip_faces = true
radius = 2.2
height = 4.4

[sub_resource type="Animation" id="Animation_faaxp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:material:shader_parameter/Color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0.709804, 0.729412, 0.392157)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:mesh:material:shader_parameter/LineWidth")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [16.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D:mesh:material:shader_parameter/Latitudes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [12.0]
}

[sub_resource type="Animation" id="Animation_w6ayr"]
resource_name = "down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:material:shader_parameter/Color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0.24, 0.974667, 1, 1), Color(0, 0.705667, 0.73, 0.196078), Color(0, 0.705667, 0.73, 0.313726), Color(0, 0.705667, 0.73, 0)]
}

[sub_resource type="Animation" id="Animation_sfl6d"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:material:shader_parameter/Color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.420448, 1),
"update": 0,
"values": [Color(0.25098, 0.976471, 1, 0.588235), Color(0, 0.709804, 0.729412, 0.392157)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:mesh:material:shader_parameter/LineWidth")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.435275, 1),
"update": 0,
"values": [12.0, 16.0]
}

[sub_resource type="Animation" id="Animation_mswk4"]
resource_name = "up"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:material:shader_parameter/Color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.24, 0.974667, 1, 0), Color(0, 0.709804, 0.729412, 0.392157)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:mesh:material:shader_parameter/Latitudes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 0.258816, 1),
"update": 0,
"values": [2.0, 2.0, 12.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D:mesh:material:shader_parameter/LineWidth")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [64.0, 16.0, 16.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fchsb"]
_data = {
"RESET": SubResource("Animation_faaxp"),
"down": SubResource("Animation_w6ayr"),
"hit": SubResource("Animation_sfl6d"),
"up": SubResource("Animation_mswk4")
}

[node name="Shield" type="Area3D"]
collision_layer = 2
collision_mask = 256
input_ray_pickable = false
script = ExtResource("1_kr24l")
leak_scene = ExtResource("2_lu0aw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_iptjo")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
cast_shadow = 0
mesh = SubResource("SphereMesh_wp7v8")

[node name="HitSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_144ls")
unit_size = 0.2

[node name="DownSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_jo21d")
volume_db = -10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_fchsb")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
